--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>霧峰區公所 - 檔案應用小學堂</title>
+    <title>霧峰區公所 - 檔案應用-有獎徵答</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -62,7 +62,7 @@
 
 <div id="game-container">
     <div id="question-screen">
-        <h2>📂 檔案應用小學堂</h2>
+        <h2>📂 檔案應用-有獎徵答</h2>
         <div id="question-text">載入中...</div>
         <div id="options-container"></div>
     </div>
@@ -141,4 +141,5 @@
 </script>
 
 </body>
+
 </html>
