--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 
     <div id="success-screen" class="result-screen">
         <div class="success-text">🎉 恭喜答對！</div>
-        <p style="font-size: 18px; line-height: 1.5;">您太厲害了！完全了解檔案應用規定。<br><br>👉 <b>請將此畫面交給工作人員</b><br>即可兌換精美小禮物！</p>
+        <p style="font-size: 18px; line-height: 1.5;">太厲害了！完全了解檔案應用規定。<br><br>👉 <b>請將此畫面交給工作人員</b><br>即可兌換精美小禮物！</p>
     </div>
 
     <div id="fail-screen" class="result-screen">
         <div class="fail-text">❌ 哎呀，答錯了！</div>
-        <p style="font-size: 18px;">沒關係，法規本來就有很多小細節。<br>要不要再挑戰一次別的題目？</p>
+        <p style="font-size: 18px;">沒關係，要不要再挑戰一次別的題目？</p>
         <button class="action-btn" onclick="startGame()">↻ 再抽一題</button>
     </div>
 </div>
@@ -143,3 +143,4 @@
 </body>
 
 </html>
+
