--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
         { q: "想向機關申請閱覽檔案，<br>該怎麼做？", options: ["偷偷溜進去看", "填寫申請書向機關申請", "打電話向機關申請"], ans: 1 },
         { q: "下列何者是霧峰區公所的<br>檔案應用開放時間？", options: ["星期一至星期五", "國定假日", "例假日"], ans: 0 },
         { q: "申請閱覽檔案時，應攜帶<br>哪種證件以備核對？", options: ["悠遊卡", "身分證或具照片之證明文件", "借書證"], ans: 1 },
-        { q: "申請閱覽檔案，可以當天<br>申請後立刻閱覽嗎？", options: ["可以立刻閱覽", "須先提出申請並經審核通過", "需先透過電話預約"], ans: 1 },
+        { q: "申請閱覽檔案，可以當天<br>申請後立刻閱覽嗎？", options: ["可以立刻閱覽", "要先提出申請並經審核通過", "要先透過電話預約"], ans: 1 },
         { q: "閱覽檔案時，<br>下列哪種行為是被允許的？", options: ["用筆在檔案上做記號", "拆散檔案卷夾", "查看檔案內容"], ans: 2 },
         { q: "檔案閱覽完畢後，<br>應該如何處理？", options: ["隨手放在桌上就好", "交還給檔案管理人員點收", "自己帶回家保存"], ans: 1 },
         { q: "民眾申請檔案應用，機關最晚<br>應於受理後幾日內通知？", options: ["30日", "60日", "90日"], ans: 0 },
         { q: "閱覽檔案時，是否可以攜帶<br>食物或飲料進入閱覽場所？", options: ["可以", "不可以", "只要不打開就可以攜帶入內"], ans: 1 },
-        { q: "如果不方便親自到場閱覽，<br>可以委託他人嗎？", options: ["不可以", "可以，需填寫委託書", "受託人出示身分證正本即可"], ans: 1 },
-        { q: "檔案法所稱的「檔案」，<br>是指下列哪一種？", options: ["民眾私下的筆記", "機關收發、保存之資料", "報章雜誌"], ans: 1 },
+        { q: "如果不方便親自到場閱覽，<br>可以委託他人嗎？", options: ["不可以", "可以，但需要填寫委託書", "可以，出示委託人的身分證即可"], ans: 1 },
+        { q: "檔案法所稱的「檔案」，<br>是指下列哪一種資料？", options: ["民眾私下的筆記", "機關收發、保存之資料", "報章雜誌"], ans: 1 },
         { q: "複製檔案以黑白複印，<br>B4(含)尺寸以下每張幾元？", options: ["10元", "5元", "2元"], ans: 2 },
-        { q: "「機關檔案目錄查詢網」的<br>英文名稱縮寫為何?", options: ["NASA", "NEAR", "GOOGLE"], ans: 1 },
+        { q: "「機關檔案目錄查詢網」的<br>英文名稱縮寫為何?", options: ["NASA", "NEAR", "NVIDIA"], ans: 1 },
         { q: "閱覽、抄錄檔案，<br>其收費標準為何？", options: ["免費", "每 2 小時 20 元", "一次 100 元"], ans: 1 },
         { q: "複製檔案以黑白複印，<br>A3尺寸每張幾元？", options: ["10元", "5元", "3元"], ans: 2 },
         { q: "檔案應用之方式，<br>不包括下列何者？", options: ["閱覽", "抄錄", "借出原件回家"], ans: 2 },
-        { q: "透過「NEAR」查詢檔案時，<br>主要是查詢什麼資訊？", options: ["檔案的內容", "檔案目錄", "檔案承辦人的姓名"], ans: 1 },
+        { q: "使用機關檔案目錄查詢網「NEAR」，<br>主要是要查詢什麼資訊？", options: ["機關檔案的內容", "機關檔案目錄", "檔案承辦人的姓名"], ans: 1 },
         { q: "遞送「檔案應用申請書」時，<br>可以透過下列哪種方式？", options: ["親自到現場送件", "透過郵寄方式送件", "以上皆是"], ans: 2 },
         { q: "各機關之檔案應用收費標準，<br>是依據哪個機關所訂定？", options: ["行政院", "檔案管理局", "國史館"], ans: 1 },
         { q: "機關通知須「補正」資料，<br>應於收到通知起幾日內補正？", options: ["7 日內", "14 日內", "30 日內"], ans: 0 },
@@ -143,4 +143,5 @@
 </body>
 
 </html>
+
 
